--- a/appsettings.json
+++ b/appsettings.json
@@ -1,14 +1,9 @@
 {
-  "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "System": "Information"
+
     }
-  },
-
-
-  "AllowedHosts": "*",
-} 
- 
-
+  }
